﻿v1.3.2

LibSBuff
* Change: Full Buff list calls on units changing to Availability. Full are now forced in to a post cache mode.
* Change: BuffUpdate no longer calls BuffAdd for full Buff lists. This Method will now queue the entire Buff list for processing.

RezMaster
* Fixed: Scaling Rez Master with active timers should no longer throw errors.

Menus
* Fixed: Scrollable views will now clamp to the last item in the list, rather than add additional empty space.
* Fixed: List views will now align themselves with the scrollbar position after collapsing and expanding Menu items.
* Fixed: Collapsing a Menu item which then disables the Scrollbar will reset the view so all items are visible.
* Fixed: Introduced a check to ensure new Scrollbar positions fall within the excepted range.

Infernal Dawn
* Rusila Dreadblade
** New: Barbed chains timer.
** Fixed: Left and Right Dreadshot death messages are now correctly linked to their options.

Translations
* French addition for Laethys Tank-Swap.
* Russian additions for Laethys encounter.

----
v1.3.1

Infernal Dawn
* Maelforge - Ember Eggs
** Fixed: Corrected skill name Molten Blast.
* Maelforge - Final
** Fixed: Corrected skill name Molten Blast.

Translations
* German additions.

----
v1.3.0

System
* New: Added Safe's Buff Library (LibSBuff)
* New: Added Safe's Table Library (LibSata)
* New: Added Safe's GUI Library (LibSGui)

Slash Commands
* /kbmdefault
** Change: This command now requires a parameter. Parameters are NOT case sensitive.
** New Parameter: All = This will reset all the defaults for supported commands below, and future commands.
** New Parameter: RCButton = Resets the Ready Check mini-map button.
** New Parameter: Button = Resets the KBM mini-map button.
** New Parameter: Menu = Resets the KBM Menu Window positioning.

Buff System
* Change: The entire Buff system and Tracking has switched over to LibSBuff

Ready Check
* New: Typing /kbmdefault will also reset the position of the Ready Check button.